--- a/assn1.ipynb
+++ b/assn1.ipynb
@@ -42,7 +42,7 @@
       "metadata": {
         "id": "xIu05M2pVzBm"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "7nZ4IWwiQmA0",
         "colab": {
@@ -98,13 +98,52 @@
       "metadata": {
         "id": "EWmPORIpVlJq"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Initial Test with Visualisations"
+        "## Pre-processing and Data Preparation"
+      ],
+      "metadata": {
+        "id": "ft7IctZV93xf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Identify missing values and replace with NaN\n",
+        "diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']] = diabetes_data[\n",
+        "    ['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']].replace(0, np.nan)\n",
+        "\n",
+        "# Impute missing values with median\n",
+        "imputer = SimpleImputer(strategy='median')\n",
+        "diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']] = imputer.fit_transform(\n",
+        "    diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']])"
+      ],
+      "metadata": {
+        "id": "OGxXjNEI92-_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = diabetes_data.drop('Outcome', axis=1)\n",
+        "y = diabetes_data['Outcome']"
+      ],
+      "metadata": {
+        "id": "FZ_bnAKG-PCA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Baseline model"
       ],
       "metadata": {
         "id": "teRkGyEJUBdJ"
@@ -113,19 +152,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Replace zeros with NaN\n",
-        "diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']] = diabetes_data[\n",
-        "    ['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']].replace(0, np.nan)\n",
-        "\n",
-        "# Impute missing values with median\n",
-        "imputer = SimpleImputer(strategy='median')\n",
-        "diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']] = imputer.fit_transform(\n",
-        "    diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']])\n",
-        "\n",
-        "# Prepare data\n",
-        "X = diabetes_data.drop('Outcome', axis=1)\n",
-        "y = diabetes_data['Outcome']\n",
-        "\n",
         "# Splitinto training and testing sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
         "\n",
@@ -196,7 +222,7 @@
         "id": "XUWuu9kFWxW8",
         "outputId": "df3a343c-0528-42bb-b519-b76ef76d7c99"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,10 +289,6 @@
         "sns.heatmap(diabetes_data.corr(), annot=True, cmap='coolwarm', fmt='.2f')\n",
         "plt.title('Correlation Heatmap')\n",
         "plt.show()\n",
-        "\n",
-        "# Perparing data\n",
-        "X = diabetes_data.drop('Outcome', axis=1)\n",
-        "y = diabetes_data['Outcome']\n",
         "\n",
         "# Split into training and testing sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
@@ -341,7 +363,7 @@
         "id": "wyybopo0UEy0",
         "outputId": "0483d717-f4b8-4705-94c5-2af22383ab49"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -418,19 +440,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Identify missing values\n",
-        "diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']] = diabetes_data[\n",
-        "    ['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']].replace(0, np.nan)\n",
-        "\n",
-        "# Impute missing values\n",
-        "imputer = SimpleImputer(strategy='median')\n",
-        "diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']] = imputer.fit_transform(\n",
-        "    diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']])\n",
-        "\n",
-        "# Data Preparation\n",
-        "X = diabetes_data.drop('Outcome', axis=1)\n",
-        "y = diabetes_data['Outcome']\n",
-        "\n",
         "# Feature selection using RFE\n",
         "selector = RFE(estimator=Perceptron(), n_features_to_select=5, step=1)\n",
         "X_selected = selector.fit_transform(X, y)\n",
@@ -506,7 +515,7 @@
         "id": "4LP0AoD2ZsbC",
         "outputId": "6308d801-a72a-4a3b-b570-51d1ca4f0248"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,18 +572,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Replace zeros with NaN\n",
-        "diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']] = diabetes_data[\n",
-        "    ['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']].replace(0, np.nan)\n",
-        "\n",
-        "# Impute missing values\n",
-        "imputer = SimpleImputer(strategy='median')\n",
-        "diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']] = imputer.fit_transform(\n",
-        "    diabetes_data[['Glucose', 'BloodPressure', 'SkinThickness', 'Insulin', 'BMI']])\n",
-        "\n",
-        "X = diabetes_data.drop('Outcome', axis=1)\n",
-        "y = diabetes_data['Outcome']\n",
-        "\n",
         "# Feature selection using RFE\n",
         "selector = RFE(estimator=Perceptron(), n_features_to_select=6, step=1)\n",
         "X_selected = selector.fit_transform(X, y)\n",
@@ -651,7 +648,7 @@
         "id": "kEe4qgI0b6O2",
         "outputId": "f6b9a5ff-a365-443b-f841-7c1d5832a2d9"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
