--- a/assn3.ipynb
+++ b/assn3.ipynb
@@ -231,7 +231,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Baseline RNN with Increased Layers"
+        "### Improved baseline RNN"
       ],
       "metadata": {
         "id": "3UKsUGLrcbu1"
